# geospeed

./: .gitattributes  .gitignore  CHANGELOG.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: benchmark.yml  coverage.yml
ALKIS_CI/: README.md
ALKIS_CI/alkis_shape_brb/: GebauedeBauwerk.dbf  GebauedeBauwerk.shp  GebauedeBauwerk.shx  NutzungFlurstueck.dbf  NutzungFlurstueck.shp  NutzungFlurstueck.shx
ALKIS_CI/alkis_shape_p/: GebauedeBauwerk.dbf  GebauedeBauwerk.shp  GebauedeBauwerk.shx  NutzungFlurstueck.dbf  NutzungFlurstueck.shp  NutzungFlurstueck.shx
benchmarks/: latest.json
docs/: WARP.md
geospeed/: __init__.py  dask_geopandas_speed.py  duckdb_speed.py  geofileops.py  geopandas_speed.py  geopandas_speed_county_wise.py  geospeed_sedona.scala  sedona_pyspark.ipynb  sedona_pyspark.py  sedona_pyspark_ci.py  utils.py
notebooks/: sedona_pyspark.ipynb
scripts/: alkis_config.txt  benchmarks.py  download_alkis_data.ps1  download_alkis_data.sh  update_readme.py
tests/: __init__.py  test_geofileops.py  test_geofileops_benchmark.py  test_sedona_benchmark.py
