[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# CI: Updated to test workflow registration

[project]
name = "geospeed"
version = "0.1.0"
description = "Speed comparison of modern GIS tools for spatial overlay operations"
authors = [{name = "SeHe"}]
requires-python = ">=3.13.7"
dependencies = [
    "geopandas==1.1.1",
    "pyogrio==0.11.1", 
    "fiona==1.10.1",
    "pyarrow",
    "dask-geopandas",
    "matplotlib",
    "memory-profiler",
    "psutil",
    "duckdb~=1.4.2",
    "pyspark==3.5.7",
    "apache-sedona[spark]==1.8.0",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest>=8.4.1",
    "pytest-cov",
    "coverage[toml]",
    "ruff",
    "ty>=0.0.1a19",
]
geofileops = [
    "geofileops>=0.10.0; sys_platform != 'win32'",  # Unix/macOS only
    # Windows: Use conda-forge for GDAL compatibility
    # conda install -c conda-forge gdal geofileops
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".venv",
    ".ipynb_checkpoints"
]
include = ["*.py", "*.ipynb"]

line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "ISC001", "COM812", "E501", "T201"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow test-specific patterns in test files
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",    # Allow assert statements in tests
    "PLC0415", # Allow imports inside functions in tests (for import testing)
    "S603",    # Allow subprocess calls in tests (for integration testing)
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --tb=short --strict-markers --cov=geospeed --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
minversion = "8.4"
markers = [
    "integration: marks tests as integration tests (may be slow or require external dependencies)",
]
